[package]
name = "eideasy"
description = "API wrapper for eIDEasy"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
repository = "https://github.com/bbqsrc/eideasy-rs"

[dependencies]
anyhow = "1.0.68"
base64 = "0.20.0"
gumdrop = "0.8.1"
mime_guess = "2.0.4"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls", "rustls-tls", "brotli", "gzip", "deflate", "json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["net", "io-util", "macros", "rt-multi-thread", "parking_lot", "tracing"] }
tracing = "0.1.37"
